--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 package falsa.posicion;
-// modficaaaaa daleeeeesdagdhgsf
+// modficaaaaa daleeeeesdagdhgsf asdasfasfgfadhsgjfhjdg
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.text.NumberFormat;
