--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 package falsa.posicion;
-//sultima pruebaaaa
+sdffadsfadsfawdfdfnnnnnn
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.text.NumberFormat;
